优化Cookie的获取和设置方法